<resources>
    <string name="app_name">APP</string>
    <string name="text_name">Name</string>
    <string name="text_lastname">LastName</string>
    <string name="text_Nit">Nit</string>
    <string name="text_Email">Email</string>
    <string name="text_Phone">Phone</string>
    <string name="text_Register">register user</string>
    <string name="text_Login">Login</string>
    <string name="text_Contra">Password</string>
    <string name="introductions">Cant decide what to watch?</string>
    <string name="text_introduction">Welcome to CineView, the ideal place where you can find the best recommendations about all kinds of movies and exclusive series of contemporary cinema; ratings based on average customer reviews, professional studies, and controversies from the viewers</string>
    <string name="properties">Content</string>
    <string name="text_properties">By clicking on the preview button, you can find movies and series recommended by year, you can also find premiere movies worldwide and finally the best rated based on professional data.</string>
    <string name="text_welcome">Welcome</string>
    <string name="user">Camilo</string>
    <string name="alert_requerid">Requerid</string>
    <string name="policies"><![CDATA[Agree Termines & Policies]]></string>
    <string name="login_email">Example@email.com</string>
    <string name="alert_register_right">Right</string>
    <string name="alert_register_name">invalid name</string>
    <string name="alert_register_lastname">invalid lastname</string>
    <string name="alert_register_nit">invalid nit</string>
    <string name="alert_register_email">invalid email</string>
    <string name="alert_register_phone">invalid phone</string>
    <string name="alert_register_password"><![CDATA[The password contains a minimum of 8 characters, uppercase and lowercase letters, a number and a special character that can be (@#$%^&+=.)]]></string>
    <string name="msn_welcome_user">Welcome</string>
    <string name="errorusername">Invalid Username</string>
    <string name="errorpassword">Invalid Password</string>
    <string name="erroremail">Invalid Email</string>
    <string name="nav_menu1">My to do List </string>
    <string name="nav_menu2">The most popular</string>
    <string name="nav_menu3">Fan Favorites</string>
    <string name="about">About</string>
    <string name="nav_menu4">In Teathers</string>
    <string name="nav_menu5">Top Box Office</string>
    <string name="nav_menu6">Coming soon Theather</string>
    <string name="text_Google">Sing in with Google</string>
    <string name="text_Facebook">Sing in with Facebook</string>
    <string name="text_trending">Most popular movies ever.</string>
    <string name="text_premiere">Premiere movies.</string>
    <string name="text_rating">Top rated movies.</string>
    <string name="text_viewandpick">Click here to pick and rate your movies.</string>
    <string name="nav_destacado">Featured today</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="prefs_file">com.example.apps.PREFERENCE_FILE_KEY</string>
    <string name="btn_back">back</string>
    <string name="forget_password">Forget Password</string>
    <string name="select_an_image">Select an Image</string>
    <string name="Btn_save">Save</string>
    <string name="Btn_delete_task">Delete Task</string>
    <string name="Btn_edit_task">Edit Task</string>
    <string name="EdTx_place">Place</string>
    <string name="EdTx_time">Time</string>
    <string name="EdTx_title">Title</string>
    <string name="Task">Task</string>
    <string name="Alert_mss_Delete">You really want to delete the task?</string>
    <string name="alert_auntentication_N">An error occurred authenticating the user</string>
    <string name="Alert_btn_Cancel">Cancel</string>
    <string name="alert_btn_ok">Ok</string>
    <string name="to_rent">To rent</string>
    <string name="message_forgot_password">Forgot your password? Enter the email you used to sign up and we will send you a new one, check the spam </string>
    <string name="forgot_password">Forgot Password</string>
</resources>