<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_opacidad"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".RegisterActivity">
    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="15dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/popeta2">

        </ImageView>

    </LinearLayout>
    -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            ////////////////////////////////////////////////////////////////

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_lastname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            ///////////////////////////////////////////////////////////////////////////

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_Nit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditDocumento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
            /////////////////////////////////////////////////////////////////////////////////

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            /////////////////////////////////////////////////////////////////////////////////

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_Phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
            //////////////////////////////////////////////////////////////////////////////////

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_Contra"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/chb_Polices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/policies" />

            <Button
                android:id="@+id/EditRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Blue_900"
                android:onClick="onRegistrar"
                android:text="@string/text_Register"
                android:textColor="@color/white"></Button>

            <Button
                android:id="@+id/login1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Blue_900"
                android:onClick="onLogin"
                android:text="@string/btn_back"
                android:textColor="@color/white"></Button>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


