<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@drawable/fondos"
    android:orientation="vertical"
    android:padding="20dp">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WelcomeActivity">
    <!--    <androidx.appcompat.widget.Toolbar
            android:id="ka@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            android:background="@color/black"
            android:elevation="4dp"
            app:title="@string/user"
            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:layout_marginTop="50dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="35dp"
                    android:text="@string/text_welcome"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/user"
                    android:textColor="@color/black"
                    android:layout_gravity="center">

                </TextView>


            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/popeta2"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="15dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:text="@string/introductions"
                    android:textColor="@color/black">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:justificationMode="inter_word"
                    android:text="@string/text_introduction">

                </TextView>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:gravity="center">


                <Button
                    android:id="@+id/preview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:onClick="vistaprevia"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/Blue_800"
                    android:text="@string/text_vistaprevia"></Button>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:text="@string/properties"
                    android:textColor="@color/black">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:justificationMode="inter_word"
                    android:autoSizeTextType="uniform"
                    android:text="@string/text_properties"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/Blue_800"
        android:layout_margin="10dp"
        android:src="@android:drawable/ic_input_add"
        app:tint="@color/white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>